--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ regex = "0.2"
 phf = "0.7.21"
 phf_macros = "0.7.21"
 lazy_static = "1.0"
+itertools = "0.7.6"
+
+[dev-dependencies]
+stainless = "*"
