--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "wana_kana"
 version = "0.9.0"
 authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
+license = "MIT"
+keywords = ["japanese", "convert", "utf8", "katakana", "hiragana", "kana", "romaji", "to_kana", "to_romaji"]
+description = """
+Utility library for checking and converting between Japanese characters - Kanji, Hiragana, Katakana - and Romaji
+"""
 
 [dependencies]
 regex = "0.2"
