--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,17 @@
 [package]
-name = "wana_kana"
-version = "0.9.2"
 authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
-repository = "https://github.com/PSeitz/wana_kana_rust"
-homepage = "https://github.com/PSeitz/wana_kana_rust"
 categories = ["text-processing"]
-license = "MIT"
+description = "Utility library for checking and converting between Japanese characters - Kanji, Hiragana, Katakana - and Romaji\n"
+homepage = "https://github.com/PSeitz/wana_kana_rust"
 keywords = ["japanese", "katakana", "hiragana", "kana", "romaji"]
-description = """
-Utility library for checking and converting between Japanese characters - Kanji, Hiragana, Katakana - and Romaji
-"""
-
+license = "MIT"
+name = "wana_kana"
+repository = "https://github.com/PSeitz/wana_kana_rust"
+version = "0.9.2"
 [dependencies]
-regex = "0.2"
-phf = "0.7.21"
-phf_macros = "0.7.21"
-lazy_static = "1.0"
+fnv = "1.0.6"
 itertools = "0.7.6"
-
+lazy_static = "1.0"
+regex = "0.2"
 [dev-dependencies.stainless]
 git = "https://github.com/PSeitz/stainless"
