--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ fnv = "1.0.6"
 itertools = "0.7.8"
 lazy_static = "1.1.0"
 regex = "1.0.2"
-[dev-dependencies.stainless]
-git = "https://github.com/PSeitz/stainless"
+
+[dev-dependencies]
+stainless2 = "0.1.12"
