--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,19 +2,20 @@
 authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
 categories = ["text-processing"]
 description = "Utility library for checking and converting between Japanese characters - Kanji, Hiragana, Katakana - and Romaji\n"
+edition = "2018"
 homepage = "https://github.com/PSeitz/wana_kana_rust"
 keywords = ["japanese", "katakana", "hiragana", "kana", "romaji"]
 license = "MIT"
-edition = "2018"
 name = "wana_kana"
 repository = "https://github.com/PSeitz/wana_kana_rust"
 version = "1.0.0"
-
 [dependencies]
 fnv = "1.0.6"
+fst = "0.3.5"
 itertools = "0.8.1"
 lazy_static = "1.4.0"
 regex = "1.3.1"
+serde_json = "1.0.41"
 
 [dev-dependencies]
 speculate = "0.1.2"
