--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ rust:
 
 after_success: |
   # bash <(curl https://raw.githubusercontent.com/xd009642/tarpaulin/master/travis-install.sh)
-  RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin
+  cargo install cargo-tarpaulin
   # Uncomment the following line for coveralls.io
   RAYON_NUM_THREADS=1 cargo tarpaulin --all --ciserver travis-ci --coveralls $TRAVIS_JOB_ID
 
