--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ after_success: |
   # bash <(curl https://raw.githubusercontent.com/xd009642/tarpaulin/master/travis-install.sh)
   cargo install cargo-tarpaulin
   # Uncomment the following line for coveralls.io
-  RAYON_NUM_THREADS=1 cargo tarpaulin --all --ciserver travis-ci --coveralls $TRAVIS_JOB_ID
+  RAYON_NUM_THREADS=1 cargo tarpaulin --all --exclude-files "src/bin/*" --ciserver travis-ci --coveralls $TRAVIS_JOB_ID
 
   # Uncomment the following two lines create and upload a report for codecov.io
   # cargo tarpaulin --out Xml
