--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,11 @@ version = "2.0.0"
 fnv = "1.0.6"
 itertools = "0.8.1"
 lazy_static = "1.4.0"
-regex = "1.3.1"
+regex = { version = "1.3.1", optional = true }
 
 [dev-dependencies]
 speculate = "0.1.2"
+
+[features]
+enable_regex = ["regex"]
+default = []
