--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ homepage = "https://github.com/PSeitz/wana_kana_rust"
 keywords = ["japanese", "katakana", "hiragana", "kana", "romaji"]
 license = "MIT"
 name = "wana_kana"
+readme = "README.md"
 repository = "https://github.com/PSeitz/wana_kana_rust"
-version = "2.0.0"
+version = "2.0.1"
 [dependencies]
 fnv = "1.0.6"
 itertools = "0.8.1"
