--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ name = "wana_kana"
 readme = "README.md"
 repository = "https://github.com/PSeitz/wana_kana_rust"
 version = "2.0.1"
+include = ["src/**/*", "LICENSE", "README.md"]
 
 [dependencies]
 fnv = "1.0.6"
