--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,16 +13,17 @@ version = "2.1.0"
 include = ["src/**/*", "LICENSE", "README.md"]
 
 [dependencies]
-fnv = "1.0.6"
-itertools = "0.8.1"
+fnv = "1.0.7"
+itertools = {version = "0.10.5", optional = true}
 lazy_static = "1.4.0"
-regex = { version = "1.3.1", optional = true }
+regex = { version = "1.7.0", optional = true }
 
 [dev-dependencies]
 speculate = "0.1.2"
 
 [features]
 enable_regex = ["regex"]
+tokenize = ["itertools"]
 default = []
 
 [[bin]]
