--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,6 @@ itertools = {version = "0.10.5", optional = true}
 lazy_static = "1.4.0"
 regex = { version = "1.7.0", optional = true }
 
-[dev-dependencies]
-speculate = "0.1.2"
 
 [features]
 enable_regex = ["regex"]
@@ -33,3 +31,10 @@ path = "src/bin/to_kana.rs"
 [[bin]]
 name = "to_romaji"
 path = "src/bin/to_romaji.rs"
+
+# docs.rs-specific configuration
+[package.metadata.docs.rs]
+# document all features
+all-features = true
+# defines the configuration attribute `docsrs`
+rustdoc-args = ["--cfg", "docsrs"]
