--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,3 +1,7 @@
-comment_width = 140
-max_width = 140
-combine_control_expr = false
+comment_width = 120
+format_strings = true
+group_imports = "StdExternalCrate"
+imports_granularity = "Module"
+normalize_comments = true
+where_single_line = true
+wrap_comments = true
